Icono de ventana
La aplicacion ahora tiene un logo

--- a/pom.xml
+++ b/pom.xml
@@ -26,4 +26,12 @@
             <version>SNAPSHOT</version>
         </dependency>
     </dependencies>
+    
+    <build>
+        <resources>
+            <resource>
+                <directory>src/com/Imagenes</directory>
+            </resource>
+        </resources>
+    </build>
 </project>
